purple agent advanced created

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 # Green GAIA Agent - Environment Configuration
 
-# Google Cloud Configuration
+# Google AI API Key (for Purple Agent LLM)
+# Get your API key from https://aistudio.google.com/apikey
+GOOGLE_API_KEY=your-api-key-here
+
+# Google Cloud Configuration (Alternative: Vertex AI)
 GOOGLE_CLOUD_PROJECT=your-project-id
 GOOGLE_CLOUD_LOCATION=us-central1
 GOOGLE_CLOUD_STORAGE_BUCKET=your-bucket-name
 
-# Use Vertex AI or AI Studio
-GOOGLE_GENAI_USE_VERTEXAI=True
-
-# Optional: AI Studio API Key (only if GOOGLE_GENAI_USE_VERTEXAI=FALSE)
-# GOOGLE_API_KEY=your-api-key-here
+# Use Vertex AI or AI Studio (set to False to use AI Studio with GOOGLE_API_KEY)
+GOOGLE_GENAI_USE_VERTEXAI=False
 
 # Purple Agent Configuration
 PURPLE_AGENT_URL=http://localhost:8080
@@ -18,3 +19,5 @@ PURPLE_AGENT_URL=http://localhost:8080
 RANDOM_SEED=42
 NUMERICAL_TOLERANCE=0.01
 TASK_TIMEOUT=60
+
+# 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
