--- a/green-evaluator/requirements.txt
+++ b/green-evaluator/requirements.txt
@@ -3,13 +3,10 @@
 # Install with: pip install -r requirements.txt
 
 # Core dependencies
-google-cloud-aiplatform[adk,agent-engines]>=1.93.0
-google-genai>=1.9.0
-google-adk>=1.0.0
-pydantic>=2.10.0
-requests>=2.32.0
-flask>=3.0.0
-python-dotenv>=1.0.0
+a2a-sdk>=0.3.5
+httpx>=0.28.0
+pydantic>=2.11.9
+python-dotenv>=1.1.1
 
 # Development dependencies
 pytest>=8.3.2
