--- a/green-evaluator/requirements.txt
+++ b/green-evaluator/requirements.txt
@@ -8,6 +8,10 @@ httpx>=0.28.0
 pydantic>=2.11.9
 python-dotenv>=1.1.1
 
+# LLM and Agent capabilities
+google-genai>=1.0.0
+google-adk>=1.14.1
+
 # Development dependencies
 pytest>=8.3.2
 pytest-asyncio>=0.23.7
