README.md added

--- a/purple-agents/advanced/.env.example
+++ b/purple-agents/advanced/.env.example
@@ -3,6 +3,22 @@
 # Required: Google API Key for Gemini models
 GOOGLE_API_KEY=your_google_api_key_here
 
+# Optional: Model selection for main coordinator agent (default: gemini-2.5-pro)
+# Available: gemini-2.0-flash-exp, gemini-1.5-flash, gemini-1.5-pro, gemini-2.5-pro
+PURPLE_ADVANCED_MODEL=gemini-2.5-pro
+
+# Optional: Model selection for individual sub-agents
+# Each sub-agent can use a different model for identification and optimization
+
+# Web Search Agent - Fast retrieval (default: gemini-2.5-flash)
+WEB_SEARCH_MODEL=gemini-2.5-flash
+
+# Deep Analyzer Agent - Balanced reasoning (default: gemini-1.5-flash)
+DEEP_ANALYZER_MODEL=gemini-1.5-flash
+
+# Calculator Agent - Ultra-fast math (default: gemini-2.5-flash-lite)
+CALCULATOR_MODEL=gemini-2.5-flash-lite
+
 # Optional: Google Cloud Project ID
 GOOGLE_CLOUD_PROJECT=your_project_id
 
