--- a/purple-agents/baseline/.env.example
+++ b/purple-agents/baseline/.env.example
@@ -3,6 +3,10 @@
 # Required: Google API Key for Gemini models
 GOOGLE_API_KEY=your_google_api_key_here
 
+# Optional: Model selection (default: gemini-2.0-flash-exp)
+# Available: gemini-2.0-flash-exp, gemini-1.5-flash, gemini-1.5-pro, gemini-2.5-pro
+PURPLE_BASELINE_MODEL=gemini-2.0-flash-exp
+
 # Optional: Google Cloud Project ID
 GOOGLE_CLOUD_PROJECT=your_project_id
 
